Revert "[WSP-525] CSS fix for overlapping logo"
This reverts commit f4f76fba1fbe7d585d686a4e473eb3b76099ec24.

--- a/repository-data/webfiles/src/main/resources/site/src/scss/rebrand/components/publications.scss
+++ b/repository-data/webfiles/src/main/resources/site/src/scss/rebrand/components/publications.scss
@@ -1,7 +1,7 @@
 .nhsd-o-hero__stamp {
-    width: 70px;
-    height: 70px;
+    width: 80px;
+    height: 80px;
     position: absolute;
-    right: 1px;
-    bottom: 1px;
+    right: 15px;
+    bottom: 15px;
 }
